# trajopt

./: CMakeLists.txt  package.xml
python_examples/: arm_to_joint_target.py  fullbody_plan.py
src/: openrave_userdata_utils.hpp
src/osgviewer/: osgviewer.cpp
src/sco/: CMakeLists.txt  optimizers.cpp  optimizers.hpp
src/trajopt/: bullet_collision_checker.cpp  collision_checker.cpp  collision_checker.hpp  configuration_space.cpp  problem_description.cpp  problem_description.hpp  trajoptpy.cpp  utils.cpp
trajoptpy/: animate_traj.py  check_traj.py
