<?xml version="1.0"?> 
<package format="2">
  <name>trajopt</name>
  <version>0.0.1</version>
  <description>
    Trajopt is a software framework for generating robot trajectories by local optimization.

    The following core capabilities are included:
    * a solver for non-convex optimization problems, using sequential convex optimization.
    * cost and constraint functions for kinematics and collision avoidance
    * constructing problems from JSON-based specification format
  </description>
  <url type="website">http://rll.berkeley.edu/trajopt/</url>
  <url type="repository">https://github.com/personalrobotics/trajopt</url>
  <url type="bugtracker">https://github.com/personalrobotics/trajopt</url>
  <maintainer email="pkv@cs.cmu.edu">Pras Velagapudi</maintainer>
  <author email="joschu@eecs.berkeley.edu">John Schulman</author>
  <license>BSD</license>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>libopenscenegraph-dev</depend>
  <depend>libboost-all-dev</depend>
  <depend>libeigen3-dev</depend>
  <depend>openrave</depend>
  <depend>numpy</depend>
  <!-- These are required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
